@@ -1,7 +1,7 @@
 package TestCase::Lib::SPVM::IO::File {
   use SPVM::IO::File;
   use SPVM::StringList;
-  use SPVM::NumberUtil (chomp_lf, equals_array_string, copy_array_range_byte);
+  use SPVM::NumberUtil (chompr, equals_array_string, copy_array_range_byte);
 
   sub test_flush : int ($file : string) {
     
@@ -268,7 +268,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chomp_lf : int ($file : string) {
+  sub test_readline_chompr : int ($file : string) {
     my $io_file = SPVM::IO::File->open($file, "<");
     unless ($io_file) {
       die "Can't open file $file";
@@ -276,7 +276,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "abcd") {
         return 0;
       }
@@ -284,7 +284,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "fghi") {
         return 0;
       }
@@ -292,7 +292,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "klm") {
         return 0;
       }
@@ -300,7 +300,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line == undef) {
         return 0;
       }
@@ -308,7 +308,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chomp_lf_while : int ($file : string) {
+  sub test_readline_chompr_while : int ($file : string) {
     my $io_file = SPVM::IO::File->open($file, "<");
     unless ($io_file) {
       die "Can't open file $file";
@@ -316,7 +316,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     my $lstrings = SPVM::StringList->new;
     while (my $line = $io_file->readline) {
-      $line = chomp_lf($line);
+      $line = chompr($line);
       $lstrings->push($line);
     }
     my $strings = $lstrings->to_array;
@@ -328,7 +328,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chomp_lf_eof : int ($file : string) {
+  sub test_readline_chompr_eof : int ($file : string) {
     my $io_file = SPVM::IO::File->open($file, "<");
     unless ($io_file) {
       die "Can't open file $file";
@@ -336,7 +336,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "abcd") {
         return 0;
       }
@@ -344,7 +344,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "fghi") {
         return 0;
       }
@@ -352,7 +352,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "") {
         return 0;
       }
@@ -360,7 +360,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "klm") {
         return 0;
       }
@@ -368,7 +368,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line == undef) {
         return 0;
       }
@@ -376,7 +376,7 @@ package TestCase::Lib::SPVM::IO::File {
     return 1;
   }
 
-  sub test_readline_chomp_lf_long_line : int ($file : string) {
+  sub test_readline_chompr_long_line : int ($file : string) {
     my $io_file = SPVM::IO::File->open($file, "<");
     unless ($io_file) {
       die "Can't open file $file";
@@ -384,7 +384,7 @@ package TestCase::Lib::SPVM::IO::File {
     
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa") {
         return 0;
       }
@@ -392,7 +392,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "fghi") {
         return 0;
       }
@@ -400,7 +400,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line eq "klm") {
         return 0;
       }
@@ -408,7 +408,7 @@ package TestCase::Lib::SPVM::IO::File {
 
     {
       my $line = $io_file->readline;
-      $line = chomp_lf($line);
+      $line = chompr($line);
       unless ($line == undef) {
         return 0;
       }
