@@ -1,7 +1,8 @@
 0.0948 2021-04-28
   - remove SPVM::StringUtil->replace_all
   - remove chomp_crlf
-  
+  - rename chomp_lf to chompr
+
 0.0947 2021-04-27
   - array equals methods return 1 if both arrays is undef. return 0 if only one one arrays is undef.
     equals_byte_array
